# rsFQC

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/internal/: fastq.rs  func.rs  mod.rs
