[package]
name = "rsFQC"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/a-xavier/rsFQC"
license = "MIT"
keywords = ["fastq", "QC", "FastQC", "genomics"]
categories = ["command-line-utilities", "science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
rayon = "1.7.0"
textplots = "0.8"
rgb = "0.8.27"
itertools = "0.11.0"
